# CROUStillantDatasets

./: .env.example  Dockerfile  README.md  __main__.py  crontab  docker-compose.yml  pyproject.toml
CROUStillantDatasets/: worker.py
CROUStillantDatasets/datasets/: __init__.py  menus.py  regions.py  restaurants.py
CROUStillantDatasets/utils/: views.py  webhook.py
